--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
+<h1>NG SWITCH</h1>
+<input type="text" [(ngModel)]="person.name">
+
+<div [ngSwitch]="person.name">
+  <div *ngSwitchCase="'rene'">
+    zz
+  </div>
+  <div *ngSwitchCase="'hasbu'">
+    el pana
+  </div>
+  <div *ngSwitchCase="'san'">
+    yop
+  </div>
+
+  <div *ngSwitchDefault>
+    no hace match
+  </div>
+</div>
+
+
+<hr>
+<hr>
+
 <app-first-component></app-first-component>
 
 
@@ -15,12 +38,14 @@
 <button (click)="addName()">add name</button>
 <input type="text" [(ngModel)]="newName">
 
-<ul>
-  <li *ngFor="let name of names; index as i">
-    {{i}} {{name}}
-    <button (click)="deleteName(i)">Delete</button>
-  </li>
-</ul>
+<div>
+  <ul>
+    <li *ngFor="let name of names; index as i">
+      {{i}} {{name}}
+      <button (click)="deleteName(i)">Delete</button>
+    </li>
+  </ul>
+</div>
 
 
 <p style="color: rgb(58, 58, 58);">
