--- a/src/app/first-component/first-component.component.html
+++ b/src/app/first-component/first-component.component.html
@@ -1,6 +1,6 @@
 <h1>NG FOR CON ARRAYS</h1>
 
-<div>
+<div class="products-grid">
   <div *ngFor="let product of products">
     <h3> {{product.name}} </h3>
     <img width="250" [src]="product.image" alt="rocky fight">
