--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,4 +5,12 @@
   background-color: antiquewhite;
 }
 
-
+.message-error {
+  background: red;
+  color: white;
+  opacity: 0;
+  transition: all linear .5s;
+  &.invalid{
+    opacity: 1;
+  }
+}
