--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
+<h1>NG CLASS & NG STYLE</h1>
+<input type="text" required #nameInput4="ngModel" [(ngModel)]="person.name">
+
+<hr class="line-error"
+  [ngClass]="{
+    'valid': nameInput4.valid,
+    'invalid': nameInput4.invalid
+  }"
+>
+
+<p class="message-error" [class.invalid]="nameInput4.invalid">
+  el campo es requerido
+</p>
+
+
+
+
+
 <h1>clases y estilos dinamicos</h1>
 <input type="text" required #nameInputDos="ngModel" [(ngModel)]="person.name">
 <p class="message-error" [class.invalid]="nameInputDos.invalid">
