--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,3 +14,14 @@
     opacity: 1;
   }
 }
+
+.line-error{
+  height: 0;
+  border-bottom: 1px solid;
+  &.invalid{
+    border-color: red;
+  }
+  &.valid{
+    border-color: green;
+  }
+}
